[gd_scene load_steps=11 format=2]

[ext_resource path="res://objects/bus/control_panel/BusControlPanel.gd" type="Script" id=1]
[ext_resource path="res://assets/yeerks_eye.png" type="Texture" id=2]
[ext_resource path="res://objects/interactive/base/BaseInteractiveObject.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/bus/control_panel/ControlPanelPopup.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 30, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 60, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 90, 0, 30, 30 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="BusControlPanel" instance=ExtResource( 3 )]
script = ExtResource( 1 )

[node name="InteractiveArea" parent="." index="0"]
visible = true

[node name="CollisionShape2D2" parent="InteractiveArea" index="0"]
shape = SubResource( 1 )

[node name="YeerkPalm" parent="." index="1"]
position = Vector2( 7, -27 )
z_index = 1
frames = SubResource( 6 )
frame = 0

[node name="ControlPanelPopup" parent="." index="2" instance=ExtResource( 4 )]
visible = false
position = Vector2( 260, -7 )
[connection signal="back_door_new_state" from="ControlPanelPopup" to="." method="_on_ControlPanelPopup_back_door_new_state"]
[connection signal="front_door_new_state" from="ControlPanelPopup" to="." method="_on_ControlPanelPopup_front_door_new_state"]
[connection signal="start_engine" from="ControlPanelPopup" to="." method="_on_ControlPanelPopup_start_engine"]

[editable path="InteractiveArea"]
